# python_project_template

./: .gitignore  .gitmessage  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CURSOR.md  GEMINI.md  LOGGING_ANALYSIS.md  README.md  ROOT_VS_TEMPLATE.md  TASK.md  TODO.md  cliff.toml  copier.yml  env.example  file_freshness.json  freshness_ignore.json  freshness_summary.json  justfile  pyproject.toml
.claude/: CLAUDE.md  migration-summary.md  settings.json
.claude/commands/: ci-fix.md  ci.md  coverage.md  dependency-check.md  docs-check.md  generate.md  release.md  review.md  standards.md  tdd-green.md  tdd-red.md  test.md  update-claude-md.md  validate-release.md
.claude/hooks/: README.md  post-bash-pr-created.sh  post-edit-copier-migration.sh  post-edit-jinja.sh  post-edit-python.sh  post-edit-refactor-test-guard.sh  post-edit-template-mirror.sh  pre-bash-branch-protection.sh  pre-bash-commit-quality.sh  pre-bash-coverage-gate.sh  pre-compact-save-state.sh  pre-config-protection.sh  pre-protect-readonly-files.sh  pre-protect-uv-lock.sh  pre-write-doc-file-warning.sh  pre-write-jinja-syntax.sh  pre-write-src-require-test.sh  protected_files.csv  session-start-bootstrap.sh  stop-cost-tracker.sh  stop-desktop-notify.sh  stop-evaluate-session.sh  stop-session-end.sh
.claude/references/: code-style.md  copier-variables.md  justfile-recipes.md  recent-improvements.md  standards-enforcement.md
.claude/rules/: README.md
.claude/rules/bash/: coding-style.md  security.md
.claude/rules/common/: code-review.md  coding-style.md  development-workflow.md  git-workflow.md  hooks.md  security.md  testing.md
.claude/rules/copier/: template-conventions.md
.claude/rules/jinja/: testing.md
.claude/rules/markdown/: conventions.md
.claude/rules/python/: coding-style.md  hooks.md  patterns.md  security.md  testing.md
.claude/skills/bash-guide/: SKILL.md
.claude/skills/config-management/: SKILL.md
.claude/skills/cron-scheduling/: SKILL.md
.claude/skills/css-guide/: SKILL.md
.claude/skills/html-guide/: SKILL.md
.claude/skills/jinja-guide/: SKILL.md
.claude/skills/linting/: SKILL.md
.claude/skills/maintain-commands/: SKILL.md  claude-commands.skill
.claude/skills/maintain-hooks/: SKILL.md  claude-hooks.skill
.claude/skills/maintain-rules/: SKILL.md
.claude/skills/maintain-skills/: SKILL.md
.claude/skills/markdown/: SKILL.md
.claude/skills/prepare-pr/: SKILL.md
.claude/skills/pytest/: SKILL.md
.claude/skills/python-code-quality/: SKILL.md
.claude/skills/python-code-reviewer/: SKILL.md
.claude/skills/python-docstrings/: SKILL.md
.claude/skills/sdlc-workflow/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/tdd-test-planner/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.claude/skills/test-quality-reviewer/: SKILL.md
.claude/skills/type-checking/: SKILL.md
.gemini/: settings.json
.github/: CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  renovate.json
.github/workflows/: dependency-review.yml  file-freshness.yml  labeler.yml  lint.yml  pr-policy.yml  pre-commit-update.yml  release.yml  security.yml  stale.yml  sync-skip-if-exists.yml  tests.yml
assets/: file_freshness.json  freshness_ignore.json  freshness_summary.json  root-template-sync-map.yaml  task_template.yaml
docs/: commit-release-workflow.md  file_locking_plan.md  git-history-maintenance.md  github-repository-settings.md  repo_file_status_report.md  repo_instructions.md  repo_management.md  root-template-sync-guide.md  root-template-sync-map.yaml  root-template-sync-policy.md
scripts/: CLAUDE.md  bump_version.py  check_root_template_sync.py  generate_obsidian_porting_report.py  generate_template_vs_obsidian_comparison.py  pr_commit_policy.py  preflight.sh  repo_file_freshness.py  sync_skip_if_exists.py  update_files.sh  validate_dor.py
temp/: justfile  pyproject.toml
temp_docs/: committed_filepaths.csv
template/: .gitignore  .gitignore.jinja  .gitmessage  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .secrets.baseline  AGENTS.md.jinja  CLAUDE.md  CLAUDE.md.jinja  CONTRIBUTING.md.jinja  CURSOR.md.jinja  GEMINI.md.jinja  LICENSE.jinja  README.md.jinja  SECURITY.md.jinja  cliff.toml.jinja  env.example.jinja  justfile.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if include_docs %}mkdocs.yml{% endif %}.jinja  {% if include_git_cliff %}cliff.toml{% endif %}.jinja
template/.claude/: migration-summary.md  settings.json  settings.json.jinja
template/.claude/commands/: ci.md  coverage.md  coverage.md.jinja  dependency-check.md  docs-check.md  docs-check.md.jinja  generate.md  guided-template-update.md  guided-template-update.md.jinja  release.md  release.md.jinja  review.md  review.md.jinja  standards.md  standards.md.jinja  tdd-green.md  test.md  update-claude-md.md  (+1 more)
template/.github/: CODEOWNERS.jinja  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  PULL_REQUEST_TEMPLATE.md.jinja  dependabot.yml  github-branch-protection.md.jinja  renovate.json  renovate.json.jinja
template/docs/: ci.md.jinja  github-repository-settings.md.jinja  index.md.jinja  {% if include_docs %}ci.md{% endif %}.jinja
template/scripts/: bump_version.py  bump_version.py.jinja  pr_commit_policy.py  pr_commit_policy.py.jinja
template/tests/: __init__.py.jinja  conftest.py.jinja  test_imports.py.jinja
tests/: CLAUDE.md  __init__.py  conftest.py  constants.py  script_imports.py  test_bump_version.py  test_check_root_template_sync.py  test_pr_commit_policy.py  test_repo_file_freshness.py  test_root_template_sync.py  test_sync_skip_if_exists.py  test_template.py
tests/integration/: test_template.py
tests/scripts/: test_bump_version.py  test_check_root_template_sync.py  test_pr_commit_policy.py  test_repo_file_freshness.py  test_root_template_sync.py  test_sync_skip_if_exists.py
tests/unit/: test_bump_version.py  test_check_root_template_sync.py  test_pr_commit_policy.py  test_repo_file_freshness.py  test_root_template_sync.py  test_sync_skip_if_exists.py
(+217 files in other folders)
