[project]
name = "python_project_template"
version = "0.0.2"
description = "Copier template repository for generating uv-first Python projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
  "copier>=9.11.2",
  "jinja2-time>=0.2.0",
  "pytest>=8.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-cov>=6.0.0",
  "coverage[toml]>=7.6.0",
  "ruff>=0.8.0",
  "basedpyright>=1.21.0",
  "pre-commit>=4.0.0",
  "typing-extensions>=4.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "RUF",  # ruff-specific rules
  "D",    # pydocstyle — enforce Google-style docstrings
  "C90",  # McCabe complexity
  "PERF", # perflint — catch performance anti-patterns
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["D"]  # test functions don't require docstrings
"scripts/**" = ["D"]  # utility scripts don't require docstrings

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q"]

# ==========================================================================
# Coverage Configuration (for template-repo test suite)
# ==========================================================================

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

[tool.basedpyright]
typeCheckingMode = "standard"
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
