[project]
name = "python_project_template"
version = "0.0.8"
description = "Copier template repository for generating uv-first Python projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
  "copier>=9.11.2",
  "jinja2-time>=0.2.0",
  "pytest>=8.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-cov>=6.0.0",
  "coverage[toml]>=7.6.0",
  "ruff>=0.8.0",
  "basedpyright>=1.21.0",
  "pre-commit>=4.0.0",
  "typing-extensions>=4.12.0",
  "detect-secrets>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
    "D",    # pydocstyle — enforce Google-style docstrings
    "C90",  # McCabe complexity
    "PERF", # perflint — catch performance anti-patterns
    "T20",  # flake8-print — discourage print() in non-test code
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["D", "T20"]  # test functions don't require docstrings; print OK in tests
"scripts/**" = ["D", "T20"]  # utility scripts may use print

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q", "--strict-markers", "--strict-config"]
markers = [
    "e2e: End-to-end tests across the full stack or external systems",
    "integration: Tests crossing module boundaries, real I/O, subprocesses, or services",
    "regression: Guards a fixed bug or ticket-specific behaviour from returning",
    "slow: Routinely exceeds ~1s; excluded from default runs (override with -m slow)",
    "smoke: Minimal deploy or health checks on critical paths",
    "unit: Fast isolated tests with boundaries mocked or in-process only",
]

# ==========================================================================
# Coverage Configuration (for template-repo test suite)
# ==========================================================================

[tool.coverage.run]
branch = true
source = ["tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
include = ["tests", "scripts"]
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
