[project]
name = "python_project_template"
version = "0.0.8"
description = "Copier template repository for generating uv-first Python projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["python", "template", "copier", "uv", "ruff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

dependencies = []  # Runtime dependencies go here

[project.optional-dependencies]
dev = [
  "copier>=9.11.2",
  "jinja2-time>=0.2.0",
  "pytest>=8.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-cov>=6.0.0",
  "coverage[toml]>=7.6.0",
  "ruff>=0.8.0",
  "basedpyright>=1.21.0",
  "pre-commit>=4.0.0",
  "typing-extensions>=4.12.0",
  "detect-secrets>=1.5.0",
  "commitizen>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["scripts", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "PGH",  # pygrep-hooks
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "D",    # pydocstyle — enforce Google-style docstrings
    "C90",  # McCabe complexity
    "PERF", # perflint — catch performance anti-patterns
    "T20",  # flake8-print — discourage print() in non-test code
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["ARG", "T20"]  # print() OK in tests; unused args OK (fixtures); D enforced
"scripts/**" = ["T20"]  # CLI scripts may use print(); docstrings enforced (D)

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]  # "." exposes scripts/
addopts = ["-q", "--strict-markers", "--strict-config"]
markers = [
    "e2e: End-to-end tests across the full stack or external systems",
    "integration: Tests crossing module boundaries, real I/O, subprocesses, or services",
    "regression: Guards a fixed bug or ticket-specific behaviour from returning",
    "slow: Routinely exceeds ~1s; excluded from default runs (override with -m slow)",
    "smoke: Minimal deploy or health checks on critical paths",
    "unit: Fast isolated tests with boundaries mocked or in-process only",
]

# ==========================================================================
# Coverage Configuration (for template-repo test suite)
# ==========================================================================

[tool.coverage.run]
branch = true
source = ["scripts"]  # measure application code, not the test suite
omit = [
    "**/__init__.py",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
include = ["scripts", "tests"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
]
venvPath = "."
venv = ".venv"
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# Commitizen: conventional commits (`cz commit`), commit-msg validation via pre-commit.
# version_provider = "pep621" means commitizen reads/writes [project].version — no duplicate.
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
